--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
   ],
   "license": "MIT",
   "require": {
-    "miaoxing/app": "^0.5.1"
+    "miaoxing/app": "^0.5.1",
+    "qcloud/cos-sdk-v5": "^2.5"
   },
   "autoload": {
     "psr-4": {
