fix(qcloud): 增加包类型为 `miaoxing-plugin`

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "miaoxing/qcloud",
+  "type": "miaoxing-plugin",
   "description": "Miaoxing Tencent Cloud Plugin",
   "keywords": [
     "miaoxing",
